# posplexity-crawl

./: .gitignore  README.md  crawl.py  crawled_links.json  download.json  playground.py  pyproject.toml  run.py
common/config/: config.py
common/types/: types.py
data/: download.json  failed_urls.json  urls.json
src/llm/prompt/: depth_ n.json  depth_1.json
src/main/: crawl.py  walk.py
src/utils/: utils.py
